style.css
body {
  padding-top: 0px;
  padding-bottom: 40px;
  background-color: #584a2a;
  background: url('assets/title_background.jpg');
  background-repeat: repeat;
  background-size: 1420px 1120px;
}

@media (max-width: 980px) {
  /* Enable use of floated navbar text */
  .navbar-text.pull-right {
	float: none;
	padding-left: 5px;
	padding-right: 5px;
  }
}
.center-navbar .nav,
.center-navbar .nav > li {
  float:none;
  display:inline-block;
  *display:inline; /* ie7 fix */
  *zoom:1; /* hasLayout ie7 trigger */
  vertical-align: top;
}

.center-navbar .navbar-inner {
  font-size: 1em;
  min-height: 120px;
  text-align:center;
  text-transform:uppercase;
}

.navbar-inner {
  background-color: transparent !important;
  background-image: none !important;
  background-repeat: none !important;
  border: none !important;
  border-radius: none !important;
  box-shadow: none !important;
  filter: none !important;
  -moz-border-radius: none !important;
  -moz-box-shadow: none !important;
  -webkit-border-radius: none !important;
  -webkit-box-shadow: none !important;
}

.navbar .nav > li > a {
  color: black;
  letter-spacing: .1em;
  padding-left: 25px;
  padding-right: 25px;
  text-decoration: none;
  text-shadow: none;
}

.fw-splash h1,
.fw-splash h2 {
  font-family: "adobe-garamond-pro",sans-serif;
  text-align: center;
  text-shadow: -1px 0px 1px #000000;
  filter: dropshadow(color=#00000, offx=-1, offy=0);
}

.fw-splash h2 {
  font-style: italic;
  font-weight: lighter;
  font-size: 1.6em;
}

.fw-splash h1 {
  text-transform:uppercase;
  font-weight: normal !important;
  font-size: 2em;
  letter-spacing: .3em;
}

.fw-splash .hero-unit > h1 > img {
  vertical-align: -17%;
  height: 2em;
  margin-right: .3em;
}

.fw-splash {
  color: #ffcc99 !important;
}

.fw-splash a {
  color: #ffcc99 !important;
}

.fw-splash .span11,
.fw-splash .span9,
.fw-splash .span6,
.fw-splash .span4
 {
  float: none;
  margin-left: auto !important;
  margin-right: auto !important;
}

.fw-splash .hero-unit {
  background-color: transparent;
}

.inactive_slide {
  display: none;
}

.slideshow {
  position: relative;
  background-size: 100%;
  height: 50%;
}
.slideshow > img {
  left: 0;
  top: 0;
}

